Project

General

Profile

Actions

Bug #17227

closed

exclusive_lock::AcquireRequest doesn't handle -ERESTART on image::RefreshRequest

Added by Jason Dillaman over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #17340: jewel: exclusive_lock::AcquireRequest doesn't handle -ERESTART on image::RefreshRequestResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Jason Dillaman
Actions #2

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17340: jewel: exclusive_lock::AcquireRequest doesn't handle -ERESTART on image::RefreshRequest added
Actions #4

Updated by Jason Dillaman about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF